compiling_error.txt
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp: In function ‘void appMouseFunc(int, int, int, int)’:
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp:194:2: error: ‘points’ was not declared in this scope
  points.push_front(Point(mx, my, red, green, blue));
  ^~~~~~
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp:194:50: error: ‘Point’ was not declared in this scope
  points.push_front(Point(mx, my, red, green, blue));
                                                  ^
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp: In function ‘void appMotionFunc(int, int)’:
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp:216:2: error: ‘points’ was not declared in this scope
  points.push_front(Point(mx, my, red, green, blue));
  ^~~~~~
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp:216:50: error: ‘Point’ was not declared in this scope
  points.push_front(Point(mx, my, red, green, blue));
                                                  ^
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp: In function ‘void appKeyboardFunc(unsigned char, int, int)’:
/home/purxiz/Documents/CSE 165/mini_project_0/app_main.cpp:234:3: error: ‘points’ was not declared in this scope
   points.clear();
   ^~~~~~
